# gmock

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  additional_deps.h  biicode.conf  config.status  configure  configure.ac  gmock.h  ignore.bii  libtool
autom4te.cache/: requests  traces.0  traces.1
bii/: dependencies.bii  mains.bii  parents.bii  paths.bii  requirements.bii
cmake/: biicode_utils.cmake
gtest/: Makefile  config.status  libtool
gtest/lib/: libgtest_main.la
gtest/lib/.libs/: libgtest.0.dylib  libgtest_main.0.dylib
gtest/src/.deps/: gtest-all.Plo  gtest_main.Plo
include/gmock/: gmock-cardinalities.h  gmock-matchers.h  gmock-spec-builders.h
include/gmock/internal/: gmock-internal-utils.h  gmock-port.h
scripts/: gmock-config
src/: gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-spec-builders.cc  gmock_main.cc
test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-internal-utils_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_link_test.h  gmock_output_test_.cc  gmock_stress_test.cc  gmock_test.cc
